Fix sample date error